fix for button wrapping

--- a/src/components/Photo.module.css
+++ b/src/components/Photo.module.css
@@ -17,6 +17,7 @@
 }
 
 .exportButton {
+    display: block;
     margin: 0 auto;
     max-width: 200px;
     width: 100%;
